<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="display_category"
        android:title="@string/display_title">

        <SwitchPreference
            android:key="dc_dimming_enable"
            android:icon="@drawable/ic_display"
            android:title="@string/dc_dimming_title"
            android:summary="@string/dc_dimming_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="hbm_enable"
            android:icon="@drawable/ic_hbm"
            android:title="@string/hbm_title"
            android:summary="@string/hbm_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="gestures_category"
        android:title="@string/gestures">

        <PreferenceScreen
                android:key="screen_gestures"
                android:icon="@drawable/ic_settings_gestures"
                android:summary="@string/gestures_dashboard_summary"
                android:title="@string/screen_off_gestures" />

    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="doze_category"
        android:title="@string/ambient_display_title">

        <PreferenceScreen
                android:key="doze"
                android:icon="@drawable/ic_doze"
                android:summary="@string/ambient_display_gestures_summary"
                android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="touch_category"
        android:title="@string/touch_title">

        <SwitchPreference
            android:key="game_touch_enable"
            android:icon="@drawable/ic_touch"
            android:title="@string/game_touch_title"
            android:summary="@string/game_touch_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="edge_mistouch_enable"
            android:icon="@drawable/ic_touch"
            android:title="@string/edge_mistouch_title"
            android:summary="@string/edge_mistouch_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="performance_category"
        android:title="@string/performance_title">

        <ListPreference
            android:key="gpu_boost_level"
            android:icon="@drawable/ic_performance"
            android:title="@string/gpu_boost_title"
            android:summary="@string/gpu_boost_summary"
            android:dialogTitle="@string/gpu_boost_title"
            android:entries="@array/gpu_boost_entries"
            android:entryValues="@array/gpu_boost_values"
            android:defaultValue="2" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="battery_category"
        android:title="@string/battery_title">

        <SwitchPreference
            android:key="charge_limit_enable"
            android:icon="@drawable/ic_battery"
            android:title="@string/charge_limit_enable_title"
            android:summary="@string/charge_limit_enable_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="charge_limit_level"
            android:title="@string/charge_limit_level_title"
            android:summary="@string/charge_limit_level_summary"
            android:dialogTitle="@string/charge_limit_level_title"
            android:entries="@array/charge_limit_entries"
            android:entryValues="@array/charge_limit_values"
            android:defaultValue="80"
            android:dependency="charge_limit_enable" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio_category"
        android:title="@string/audio_title">

        <SwitchPreference
            android:key="clear_speaker"
            android:icon="@drawable/ic_speaker"
            android:title="@string/clear_speaker_title"
            android:summary="@string/clear_speaker_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb_category"
        android:title="@string/usb_title">

        <SwitchPreference
            android:key="otg_enable"
            android:icon="@drawable/ic_otg"
            android:title="@string/otg_title"
            android:summary="@string/otg_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

<!--
    <PreferenceCategory
        android:key="vib_strength_category"
        android:title="@string/vibrator_intensity_control">

        <org.aospextended.device.vibration.VibratorStrengthPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibrate" />
    </PreferenceCategory>
-->
</PreferenceScreen>

